fix arrows showing on number input on firefox

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Removes arrows from number inputs */
-@layer base {
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+/* Removes arrows from number inputs on webkit (Chrome, Safari etc.) */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Removes arrows from number inputs on firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
